added skeleton preloader

--- a/index.html
+++ b/index.html
@@ -88,21 +88,48 @@
 
         <div class="country-body">
             <div class="row c-body g-4" id="c-body">
-                <!-- <div class="card country mode col-sm-12 col-md-2 col-lg-3 col-xl-4" id="country" style="width: 15rem;">
-                    <div class="flag-body">
-                        <img src="./greener global Capture.PNG" class="flag" alt="" srcset="">
+                <div class="card country mode col-sm-12 col-md-2 col-lg-3 col-xl-4" id="country" style="width: 15rem;">
+                    <div class="flag-body-Load">
                     </div>
                     <div class="card-body card-b" id="country">
-                        <h6 class="card-title "><b>United States of America</b> </h6>
-                        <p class="card-text c-txt "> <b>Population:</b> <span>323,947,000</span></p>
-                        <p class="card-text c-txt "> <b>Region:</b> <span>Americas</span></p>
-                        <p class="card-text c-txt "><b>Capital:</b> <span>Washington, D.C</span></p>
-                        <p class="card-text c-txt continent "><b>Continet:</b> <span>America</span></p>
+                        <h6 class="card-title-load "> </h6>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load "></p>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load continent "></p>
                     </div>
                     <div class="cover" id="common">
                         .
                     </div>
-                </div> -->
+                </div>
+                <div class="card country mode col-sm-12 col-md-2 col-lg-3 col-xl-4" id="country" style="width: 15rem;">
+                    <div class="flag-body-Load">
+                    </div>
+                    <div class="card-body card-b" id="country">
+                        <h6 class="card-title-load "> </h6>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load "></p>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load continent "></p>
+                    </div>
+                    <div class="cover" id="common">
+                        .
+                    </div>
+                </div>
+                <div class="card country mode col-sm-12 col-md-2 col-lg-3 col-xl-4" id="country" style="width: 15rem;">
+                    <div class="flag-body-Load">
+                    </div>
+                    <div class="card-body card-b" id="country">
+                        <h6 class="card-title-load "> </h6>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load "></p>
+                        <p class="c-txt-load "></p>
+                        <p class="card-text-load continent "></p>
+                    </div>
+                    <div class="cover" id="common">
+                        .
+                    </div>
+                </div>
             </div>
         </div>
     </div>
